<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe"/>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.models.ShoeViewModel"/>

    </data>


<!-- Used constraint layout because I wanted to implement vertical chaining -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_create_new_shoe"
            style="@style/lyric_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_a_new_shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_txt_shoe_name"
            style="@style/input_details_style"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/title_create_new_shoe" />

        <EditText
            android:id="@+id/edit_txt_company"
            style="@style/input_details_style"
            android:ems="10"
            android:hint="@string/company"
            android:inputType="textPersonName"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_shoe_name" />

        <EditText
            android:id="@+id/editTextShoeSize"
            style="@style/input_details_style"
            android:ems="10"
            android:inputType="number"
            android:text="@={``+ shoe.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_company" />

        <Button
            android:id="@+id/button_save"
            style="@style/super_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_cancel"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/super_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@android:string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/button_save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            style="@style/input_details_style"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description2"
            android:inputType="textMultiLine"
            android:text="@={shoe.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/editTextShoeSize" />

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all_fields_are_mandatory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_details"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="@+id/editTextShoeSize"
            app:layout_constraintEnd_toStartOf="@+id/editTextShoeSize"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextShoeSize" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_details"
            android:layout_height="wrap_content"
            android:text="@string/description2"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextMultiLine"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextMultiLine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/editTextTextMultiLine" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_details"
            android:layout_height="wrap_content"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/edit_txt_company"
            app:layout_constraintEnd_toStartOf="@+id/edit_txt_company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_txt_company" />

        <TextView
            android:id="@+id/textView5"
            style="@style/text_details"
            android:layout_height="wrap_content"
            android:text="Name"
            app:layout_constraintBottom_toBottomOf="@+id/edit_txt_shoe_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_txt_shoe_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_txt_shoe_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>